# fcitx-sunpinyin

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README  autogen.sh  config.h.in  configure.in
cmake/: FindSunpinyin.cmake
data/: CMakeLists.txt  Makefile.am  fcitx-sunpinyin.conf  fcitx-sunpinyin.conf.in  fcitx-sunpinyin.desc  getdescpo  sunpinyin.conf.in
debian/: changelog  control  copyright
po/: CMakeLists.txt  POTFILES.in  POTFILES.in.in  ca.po  da.po  de.po  fcitx-sunpinyin.pot  ja.po  ko.po  ru.po  srcfiles.cmake  tr.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  Makefile.am  config.cpp  eim.cpp  eim.h  fcitx-sunpinyin.conf.in  fcitx-sunpinyin.desc  handler.cpp  handler.h  sunpinyin.c
test/: CMakeLists.txt  shuangpin_decode.cpp
