#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/eim.h])
AM_INIT_AUTOMAKE(fcitx-sunpinyin, "0.1.0")

AC_CANONICAL_HOST
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
LT_INIT
AC_PROG_LIBTOOL

AM_ICONV

ALL_LINGUAS="zh_CN"
GETTEXT_PACKAGE=fcitx-sunpinyin
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
AC_PROG_INTLTOOL([0.35.0])
AM_GNU_GETTEXT([external])

PKG_CHECK_MODULES(FCITX, fcitx)
PKG_CHECK_MODULES(FCITX_CONFIG, fcitx-config)
PKG_CHECK_MODULES(SUNPINYIN, sunpinyin-2.0)
AC_SUBST(FCITX_LIBS)
AC_SUBST(FCITX_CFLAGS)
AC_SUBST(SUNPINYIN_LIBS)
AC_SUBST(SUNPINYIN_CFLAGS)

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([limits.h malloc.h malloc/malloc.h stdlib.h string.h sys/param.h unistd.h wait.h sys/wait.h machine/endian.h pthread.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([memmove memset mkdir setlocale strcasecmp strstr strtol asprintf vasprintf])

AC_CONFIG_FILES([
                 Makefile
                 src/Makefile
                 po/Makefile.in
                 ])

AC_OUTPUT
